--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "Riot-Test-Api",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "dotenv": "^8.2.0"
+  }
 }
