--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "Riot-Test-Api",
-  "version": "1.0.0",
-  "type": "module",
+  "name": "clash-lookup",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "axios": "^0.21.0",
-    "dotenv": "^8.2.0"
+    "next": "10.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
